--- a/app/src/main/res/layout/activity_register_member.xml
+++ b/app/src/main/res/layout/activity_register_member.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/icon_background"
     tools:context="cn.cnlinfo.ccf.activity.RegisterMemberActivity"
     android:orientation="vertical">
 
@@ -19,8 +20,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/vp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/icon_background">
+        android:layout_height="match_parent">
 
     </android.support.v4.view.ViewPager>
 </LinearLayout>
