--- a/app/src/main/res/menu/layout_menu.xml
+++ b/app/src/main/res/menu/layout_menu.xml
@@ -9,14 +9,14 @@
         android:icon="@drawable/icon_qr_code"
         android:title="我的二维码"/>
 
-    <item
-        android:id="@+id/exit"
-        android:icon="@drawable/icon_exit_account"
-        android:title="退出账户"/>
 
     <item
         android:id="@+id/setting"
         android:icon="@drawable/icon_setting"
         android:title="设置"/>
+    <item
+        android:id="@+id/exit"
+        android:icon="@drawable/icon_exit_account"
+        android:title="退出当前账户"/>
 
 </menu>
