--- a/app/src/main/res/layout/activity_user_parameter.xml
+++ b/app/src/main/res/layout/activity_user_parameter.xml
@@ -327,7 +327,7 @@
                         android:layout_height="@dimen/height"
                         style="@style/text_0e1214_15"/>
                 </LinearLayout>
-                <LinearLayout
+               <!-- <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
@@ -364,7 +364,7 @@
                         android:layout_height="@dimen/height"
                         style="@style/text_0e1214_15"/>
                 </LinearLayout>
-
+-->
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
