推荐网络模块，修改登录模块返回数据，主页账号信息数据,加载推荐网络，分享用户列表

--- a/app/src/main/res/layout/activity_recommend_net.xml
+++ b/app/src/main/res/layout/activity_recommend_net.xml
@@ -6,24 +6,42 @@
     android:orientation="vertical"
     android:background="@drawable/icon_background">
     <include layout="@layout/item_title_no_right"/>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <LinearLayout
+
+    <in.srain.cube.views.ptr.PtrClassicFrameLayout
+        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/pfl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-        <include layout="@layout/item_image" />
-        <TextView
-            style="@style/text_0e1214_20"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="用户推荐人员层级信息" />
-        <cn.cnlinfo.ccf.view.ViewWithLine
-            android:id="@+id/vwl_self"
-            android:layout_width="720dp"
-            android:layout_height="1280dp" />
-    </LinearLayout>
-    </ScrollView>
+        cube_ptr:ptr_duration_to_close="200"
+        cube_ptr:ptr_duration_to_close_header="1000"
+        cube_ptr:ptr_keep_header_when_refresh="true"
+        cube_ptr:ptr_pull_to_fresh="false"
+        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
+        cube_ptr:ptr_resistance="1.7" >
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <include layout="@layout/item_image" />
+                <TextView
+                    style="@style/text_0e1214_20"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="18dp"
+                    android:text="推荐人员层级信息" />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="vertical"
+                    android:layout_marginTop="9dp"
+                    cube_ptr:showDividers="middle"
+                    />
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
+    </in.srain.cube.views.ptr.PtrClassicFrameLayout>
+
 </LinearLayout>
