--- a/app/src/main/res/layout/activity_production_points_conversin.xml
+++ b/app/src/main/res/layout/activity_production_points_conversin.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/icon_background"
-    tools:context="cn.cnlinfo.ccf.activity.CycleCouponConversionActivity">
+    android:background="@drawable/icon_background">
     <include layout="@layout/item_title_no_right"/>
     <include layout="@layout/item_image"/>
     <LinearLayout
@@ -48,10 +47,10 @@
                     android:layout_weight="3"
                     android:text="产品积分数量"
                     style="@style/text_0e1214_15"/>
-                <EditText
+                <cn.cnlinfo.ccf.view.CleanEditText
                     android:id="@+id/edit_ccvp_number"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="32dp"
                     android:gravity="center"
                     android:layout_weight="7"
                     style="@style/text_0e1214_15"
@@ -70,10 +69,10 @@
                     android:layout_weight="3"
                     android:text="兑换比例"
                     style="@style/text_0e1214_15"/>
-                <EditText
+                <cn.cnlinfo.ccf.view.CleanEditText
                     android:id="@+id/edit_exchange_ratio"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="32dp"
                     android:gravity="center"
                     android:layout_weight="7"
                     style="@style/text_0e1214_15"
@@ -92,10 +91,10 @@
                     android:layout_weight="3"
                     android:text="兑换数量"
                     style="@style/text_0e1214_15" />
-                <EditText
+                <cn.cnlinfo.ccf.view.CleanEditText
                     android:id="@+id/edit_exchange_number"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="32dp"
                     android:layout_weight="7"
                     android:gravity="center"
                     style="@style/text_0e1214_15"
@@ -111,7 +110,7 @@
                 <Button
                     android:id="@+id/but_confirm"
                     android:layout_width="69dp"
-                    android:layout_height="22dp"
+                    android:layout_height="32dp"
                     android:background="@drawable/selector_button_bg"
                     android:text="兑换"
                     style="@style/text_0e1214_15"/>
