--- a/app/src/main/res/layout/activity_record_center.xml
+++ b/app/src/main/res/layout/activity_record_center.xml
@@ -135,6 +135,19 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/color_gray_eae8db"/>
+        <TextView
+            android:id="@+id/tv_pur_meal_record"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:text="购买套餐记录"
+            style="@style/text_0e1214_17"
+            android:gravity="center_vertical"
+            android:background="@drawable/selector_text_view_bg"
+            />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/color_gray_eae8db"/>
     </LinearLayout>
     </ScrollView>
 </LinearLayout>
