--- a/app/src/main/res/layout/activity_purchase_meal_record.xml
+++ b/app/src/main/res/layout/activity_purchase_meal_record.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/icon_background"
     tools:context="cn.cnlinfo.ccf.activity.PurchaseMealRecordActivity">
+
+    <include layout="@layout/item_title_no_right"/>
+
 
 </LinearLayout>
