--- a/app/src/main/res/layout/activity_transaction_record.xml
+++ b/app/src/main/res/layout/activity_transaction_record.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#fff"
+    android:background="@drawable/icon_background"
     tools:context="cn.cnlinfo.ccf.activity.TransactionRecordActivity">
     <include layout="@layout/item_title_no_right"/>
 
@@ -23,7 +23,7 @@
             </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview"
+            android:id="@+id/rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
         </android.support.v7.widget.RecyclerView>
