--- a/app/src/main/res/layout/activity_contribute_value_record.xml
+++ b/app/src/main/res/layout/activity_contribute_value_record.xml
@@ -28,7 +28,7 @@
                     android:text="我的贡献值" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview"
+            android:id="@+id/rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
 
