--- a/app/src/main/res/layout/activity_me_dedication.xml
+++ b/app/src/main/res/layout/activity_me_dedication.xml
@@ -19,7 +19,7 @@
             style="@style/text_0e1214_17" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview"
+            android:id="@+id/rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
