--- a/app/src/main/res/layout/activity_walk_record.xml
+++ b/app/src/main/res/layout/activity_walk_record.xml
@@ -22,7 +22,7 @@
             style="@style/text_0e1214_17" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerview"
+            android:id="@+id/rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </android.support.v7.widget.RecyclerView>
