--- a/app/src/main/res/layout/activity_itsef_transfer_records.xml
+++ b/app/src/main/res/layout/activity_itsef_transfer_records.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,20 +12,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="18dp"
-        android:background="@drawable/icon_background"
         android:orientation="vertical">
-
-        <TextView
+        <in.srain.cube.views.ptr.PtrClassicFrameLayout
+            xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/pfl"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/one_level_height"
-            android:text="自身转账记录"
-            style="@style/text_0e1214_17" />
-
+            android:layout_height="match_parent"
+            cube_ptr:ptr_duration_to_close="200"
+            cube_ptr:ptr_duration_to_close_header="1000"
+            cube_ptr:ptr_keep_header_when_refresh="true"
+            cube_ptr:ptr_pull_to_fresh="false"
+            cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
+            cube_ptr:ptr_resistance="1.7" >
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </android.support.v7.widget.RecyclerView>
-
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:layout_marginTop="9dp"
+            cube_ptr:showDividers="middle"
+            />
+        </in.srain.cube.views.ptr.PtrClassicFrameLayout>
     </LinearLayout>
 </LinearLayout>
