--- a/app/src/main/res/layout/activity_record_center.xml
+++ b/app/src/main/res/layout/activity_record_center.xml
@@ -87,7 +87,7 @@
             android:id="@+id/tv_conversion_record"
             android:layout_width="match_parent"
             android:layout_height="32dp"
-            android:text="兑换记录"
+            android:text="兑换循环包记录"
             style="@style/text_0e1214_17"
             android:gravity="center_vertical"
             android:background="@drawable/selector_text_view_bg"
