--- a/app/src/main/res/layout/item_conversion_cycle_pack_record.xml
+++ b/app/src/main/res/layout/item_conversion_cycle_pack_record.xml
@@ -102,7 +102,7 @@
         </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="9dp"
         >
